forced US locale. removed comma check added parameters for configuring maximum decimal places and the number of digits to pad up to with extra zeroes text alignment and above parameters now use setters instead of method arguments gimbal heading numbers are now padded to 3 digits like real bearings :3 minor refactors